# Urban-delivery-env

./: .dockerignore  .gitignore  Makefile  README.md  __init__.py  client.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml
graders/: __init__.py  base_grader.py  easy_grader.py  hard_grader.py  medium_grader.py
models/: __init__.py  action.py  observation.py  reward.py
scripts/: benchmark.py  interactive_debugger.py
server/: Dockerfile  __init__.py  app.py  observation.py  requirements.txt  rubric.py  urban_delivery_environment.py
tasks/: __init__.py  easy.py  hard.py  medium.py
tests/: __init__.py  conftest.py  test_env.py  test_graders.py  test_inference.py  test_server.py
